--- a/Back/views/site/accueil.ejs
+++ b/Back/views/site/accueil.ejs
@@ -1,6 +1,6 @@
-<%- include('header.ejs') %>
+<%- include('../siteElements/header.ejs') %>
     <body>
-        <%- include('menu.ejs') %>
+        <%- include('../siteElements/menu.ejs') %>
         <!-- <div class="container">
             <h1 class="mt-5 mb-5 text-center text-primary"><b>Login in Node.js Express</b></h1>
 
