--- a/Back/views/user/login.ejs
+++ b/Back/views/user/login.ejs
@@ -1,5 +1,6 @@
-<%- include('header.ejs') %>
-    <%- include('menu.ejs') %>
+<%- include('../siteElements/header.ejs') %>
+    <body>
+        <%- include('../siteElements/menu.ejs') %>
         <div class="container">
             <h1 class="mt-5 mb-5 text-center text-grey"><b>Connexion à l'interface d'administration</b></h1>
             <div class="row mt-5">
