--- a/Back/public/stylesheets/style.css
+++ b/Back/public/stylesheets/style.css
@@ -1,24 +1,90 @@
 :root{
   /* Var de couleur */
   --light-grey: rgba(248,249,250);
+  --light-grey2: #ececec;
   --grey: rgba(0,0,0,.55);
   --dark-grey: rgba(0,0,0,.7);
+  --blue: #0d6efd;
+  --success: #32de84;
+  --danger:#dc3545;
+
 
   /* Var de composant */
   /* menu */
   --main-menu-bg: var(--light-grey);
   --main-menu-link-color: var(--grey);
   --main-menu-link-color-hover: var(--dark-grey);
-
+  --body-bg: var(--light-grey2);
 }
+
+/* Base element */
+a, a:hover{
+  text-decoration: none;
+  color: inherit!important;
+}
+
 /* Element */
-.btn-grey{
-  background-color: var(--light-grey);
-  color: black;
+.btn-grey{background-color: var(--light-grey);color: black;}
+.btn-grey:hover{border-color: var(--grey);}
+
+.text-blue{color: var(--blue);}
+.bg-blue{background-color: var(--blue);color: white;}
+
+.text-success{color: var(--success)!important;}
+.bg-success{background-color: var(--success)!important;color: white;}
+
+.text-danger{color: var(--danger)!important;}
+.bg-danger{background-color: var(--danger)!important;color: white;}
+
+body{background-color: var(--body-bg);}
+
+.form-control{
+  -webkit-appearance: none!important;
+  -moz-appearance: none!important;
+  appearance: none!important;
+  background-color: transparent!important;
+  border: 0!important;
+  border-bottom: 1px solid var(--light-grey2)!important;
+  border-radius: 0!important;
+  color: dark!important;
+  font-size: 16px!important;
+  font-weight: 400!important;
+  line-height: 22px;
+  outline: none!important;
+  padding: 0 0 4px!important;
+  resize: none!important;
+  width: 100%!important;
+}
+.form-control:focus {
+  appearance: none!important;
 }
 
-.btn-grey:hover{
-  border-color: var(--grey);
+.form-divider{
+  background: var(--light-grey2);
+  border: 0;
+  display: block;
+  font-size: 0;
+  height: 1px;
+  line-height: 0;
+  margin: 0;
+  min-height: 1px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.form-group{
+  background: white;
+  border-radius: 4px;
+  box-shadow: none;
+  margin-bottom: 15px;
+  padding:10px;
+}
+
+.nice-select.open .list{
+  max-height:250px;
+  width:100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 
@@ -42,4 +108,10 @@
   height:50px;
   width:50px;
   border-radius: 50%;
+}
+
+/* dashboard */
+.dashboard_buttons:hover{
+  transform: translateY(-0.25em);
+  transition-duration: 500ms;
 }
