--- a/Back/public/stylesheets/style.css
+++ b/Back/public/stylesheets/style.css
@@ -115,3 +115,142 @@ body{background-color: var(--body-bg);}
   transform: translateY(-0.25em);
   transition-duration: 500ms;
 }
+
+
+
+/* Card Sneakers */
+.product-item {
+  background-color: #F7F8F9;
+  border-radius: 30px;
+  padding: 30px 35px 41px;
+  overflow: hidden;
+  position: relative;
+}
+.product-item .product-thumb {
+  border-radius: 30px;
+  display: block;
+  margin-bottom: 35px;
+  overflow: hidden;
+}
+.product-item .product-thumb img {
+  transition: all 0.5s ease 0s;
+  width: 100%;
+}
+.product-item .badges {
+  background-color: #FF5A5A;
+  border-radius: 40px;
+  color: #FFFFFF;
+  display: inline-block;
+  font-family: "Playfair Display", serif;
+  font-size: 13px;
+  left: 29px;
+  line-height: 1;
+  padding: 4px 18px 8px;
+  position: absolute;
+  text-align: center;
+  top: 31px;
+}
+.product-item .product-action {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  right: 49px;
+  justify-content: center;
+  top: 50px;
+}
+.product-item .product-action .product-action-btn {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  color: #FFFFFF;
+  font-size: 18px;
+  height: 35px;
+  line-height: 45px;
+  margin: 3px 0;
+  opacity: 0;
+  text-align: center;
+  transition: all 0.5s ease 0s;
+  transition-delay: 150ms;
+  width: 35px;
+  transform: translate(0, -15px);
+  -webkit-transform: translate(0, -15px);
+  -moz-transform: translate(0, -15px);
+  -ms-transform: translate(0, -15px);
+  -o-transform: translate(0, -15px);
+}
+.product-item .product-action .product-action-btn.action-btn-cart {
+  font-size: 17px;
+}
+.product-item .product-action .action-btn-cart {
+  transition-delay: 200ms;
+}
+.product-item .product-action .product-action-btn.action-btn-compare {
+  font-size: 16px;
+}
+.product-item .product-action .action-btn-compare {
+  transition-delay: 250ms;
+}
+.product-item .product-info {
+  padding-right: 55px;
+  position: relative;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px), only screen and (max-width: 767px){
+  .product-item .product-info .title {
+    font-size: 16px;
+  }
+  .product-item .price {
+    font-size: 16px;
+  }
+  .product-item .price .price-old {
+    font-size: 13px;
+  }
+}
+.product-item .product-info .title {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 9px;
+    min-height:70px;
+}
+.product-item .product-info .title a {
+  color: #1D3557;
+}
+.product-item .price {
+    align-items: baseline;
+    color: #1D3557;
+    display: flex;
+    font-family: "Playfair Display", serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1;
+}
+.product-item .price .price-old {
+    font-size: 13px;
+}
+
+.product-item .price .price-old {
+    color: #457B9D;
+    font-size: 16px;
+    font-weight: 500;
+    margin-left: 11px;
+    -webkit-text-decoration-line: line-through;
+    text-decoration-line: line-through;
+    -webkit-text-decoration-color: rgba(69, 123, 157, 0.35);
+    text-decoration-color: rgba(69, 123, 157, 0.35);
+}
+.product-item:hover .product-thumb img {
+  transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
+}
+.product-item:hover .product-action .product-action-btn {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+}
