--- a/Back/views/site/accueil.ejs
+++ b/Back/views/site/accueil.ejs
@@ -1,36 +1,13 @@
 <%- include('../siteElements/header.ejs') %>
     <body>
         <%- include('../siteElements/menu.ejs') %>
-        <!-- <div class="container">
-            <h1 class="mt-5 mb-5 text-center text-primary"><b>Login in Node.js Express</b></h1>
-
-            <div class="row mt-5">
-                <div class="col-md-3">&nbsp;</div>
-                <div class="col-md-6">
-
-                    <h1>Hi User, Welcome</h1>
-
-                    <a href="/logout" class="btn btn-primary">Logout</a>
-                    <div class="card">
-                        <div class="card-header">Login</div>
-                        <div class="card-body">
-                            <form method="post" action="/login">
-                                <div class="mb-3">
-                                    <label>Email Address</label>
-                                    <input type="email" name="user_email_address" class="form-control" />
-                                </div>
-                                <div class="mb-3">
-                                    <label>Password</label>
-                                    <input type="password" name="user_password" class="form-control" />
-                                </div>
-                                <div class="mb-3">
-                                    <input type="submit" class="btn btn-primary" value="Login" />
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+        <div class="container">
+            <h1 class="mt-5 mb-5 text-center text-primary"><b>Nos dernières sorties</b></h1>
+            <div class="row justify-content-md-center">
+                <% for(var i = 0; i < listSneakers.length; i++) { %>
+                    <%- include('../elements/sneaker_card.ejs', {sneaker: listSneakers[i]}) %>
+                <% } %>      
             </div>
-        </div> -->
+        </div>
     </body>
 </html>
