--- a/Back/views/sneaker/create.ejs
+++ b/Back/views/sneaker/create.ejs
@@ -4,15 +4,17 @@
         <div class="container form-container">
             <h1 class="mt-5 mb-5 text-grey"><b>Ajoute ta paire</b></h1>
             <form method="post" action="/sneaker  ">
+                <input type="text" hidden name="code" value='<%- sneakerDetail.code %>'>
+                <input type="text" hidden name="img_link" value='<%- sneakerDetail.image %>'>
                 <div class="form-group row">
                     <label for="titre" class="col-sm-6 col-form-label">Titre*</label>
                     <div class="col-sm-6">
-                      <input type="text" class="form-control" name="titre" id="titre" placeholder="ex: Nike Air Force 1" value="Nike air force 1" required>
+                      <input type="text" class="form-control" name="titre" id="titre" placeholder="ex: Nike Air Force 1" value='<%- sneakerDetail.name %>' required>
                     </div>
                     <div class="form-divider"></div>
                     <label for="description" class="col-sm-6 col-form-label">Décris ta paire*</label>
                     <div class="col-sm-6">
-                        <textarea class="form-control" id="description" rows="3" name="description">Ma description</textarea>
+                        <textarea class="form-control" id="description" rows="8" name="description"><%- sneakerDetail.description %></textarea>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -66,7 +68,7 @@
                 <div class="form-group row">
                     <label for="prix" class="col-sm-6 col-form-label">Prix*</label>
                     <div class="col-sm-6">
-                      <input type="text" class="form-control" id="prix" placeholder="0,00€" name="prix" value="150" required>
+                      <input type="text" class="form-control" id="prix" placeholder="0,00€" name="prix" required>
                     </div>
                 </div>
                 <center><button class="btn btn-sm btn-success" type="submit">Valider</button></center>
