--- a/Back/views/elements/sneaker_card.ejs
+++ b/Back/views/elements/sneaker_card.ejs
@@ -1,20 +1,22 @@
 <div class="mt-5 col-xs-12 col-md-6 col-lg-5 col-xl-4">
-    <div class="product-item">
+    <div class="product-item product-item-border">
         <a class="product-thumb" href="shop-single-product.html">
             <img src="<%= sneaker.Sneaker_img_link %>" width="300" height="286" alt="Image-HasTech">
         </a>
         <!-- <span class="badges">New</span> -->
         <div class="product-action">
-            <img class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal" src="/images/default/instagram.png" alt="Vinted">
+            <img class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal" src="/images/default/instagram.png" alt="Instagram">
             <img class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal" src="/images/default/vinted.png" alt="Vinted">
         </div>
         <div class="product-info">
             <h4 class="title"><a href="shop-single-product.html"><%= sneaker.Sneaker_titre %></a></h4>
             <!-- <div class="price">$650.00 <span class="price-old">$650.00</span></div> -->
             <div class="price"><%= sneaker.Sneaker_prix %>€</div>
-            <!-- <button type="button" class="info-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                <i class="fa fa-heart-o"></i>
-            </button> -->
+            <% if (showSellButton) { %>
+                <button type="button" class="info-btn-wishlist sell" data-bs-toggle="modal" data-sneaker-id="<%= sneaker.Sneaker_id %>" data-bs-target="#action-WishlistModal" alt="Vendre">
+                    <i class="fa-solid fa-handshake"></i>
+                </button>
+            <% } %>
         </div>
     </div>
 </div>
